--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -12,10 +12,11 @@
   <ul>
     <% skills.forEach(skill => { %>
       <li>
-        <%= skill.skill %> --- 
+        <a href="/skills/<%= skill._id %>"><%= skill.skill %></a> --- 
         <%= skill.hasSkill ? 'Of course I can do this I am a quarter way through a boot camp' : 'This is too advanced for my current level'%>
       </li>
     <% }) %>
     </ul>
+    <a href="/skills/new">Add Skill</a>
 </body>
 </html>
