--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -12,6 +12,9 @@
   <ul>
     <% skills.forEach(skill => { %>
       <li>
+        <form class="delete-form" method="POST" action="/skills/<%= skill._id %>?_method=DELETE">
+          <button type="submit">X</button>
+        </form>
         <a href="/skills/<%= skill._id %>"><%= skill.skill %></a> --- 
         <%= skill.hasSkill ? 'Of course I can do this I am a quarter way through a boot camp' : 'This is too advanced for my current level'%>
       </li>
